# mogil-bench

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  daytona-runtime-image.md  release.md  research.md
docs/plans/: 2026-07-11-harbor-foundation.md
packs/: command-smoke-v1.yaml  daytona-provider-parity-v1.yaml  pi-activation-v1.yaml  pi-template-v1.yaml  sample-v1.yaml
packs/fixtures/: smoke.py  ticket.txt
packs/fixtures/coding/: calculator.py  test_calculator.py
packs/fixtures/pi-activation/calculator/: calculator.py  verify.py
packs/fixtures/pi-activation/inventory/: inventory.py  verify.py
packs/fixtures/pi-activation/slugify/: slugify.py  verify.py
packs/fixtures/pi-activation/windows/: verify.py  windows.py
runtime/daytona/: Dockerfile  package-lock.json  package.json
scripts/: build-daytona-runtime.sh  inspect-daytona-runtime.sh
src/mogil_bench/: __init__.py  artifacts.py  cli.py  comparisons.py  evidence.py  harbor_backend.py  harbor_daytona.py  harbor_pi.py  harbor_tasks.py  models.py  packs.py  parity.py  run_bundle.py  runner.py  trajectory.py  uploads.py
tests/: test_daytona_parity.py  test_daytona_runtime_image.py  test_harbor_backend.py  test_harbor_bundle.py  test_harbor_daytona.py  test_harbor_daytona_live.py  test_harbor_docker_smoke.py  test_harbor_pi.py  test_harbor_translation.py  test_mogil_bench.py  test_paired_comparison.py  test_pi_evidence.py  test_release_readiness.py  test_upload_reliability.py
tests/fixtures/: completed-parity-comparison.csv  harbor-smoke-v1.yaml
tests/fixtures/completed-parity-run/: manifest.json  mogil.harbor-evidence.json
tests/fixtures/harbor-coding-task/: agent.py  calculator.py  verify.py
