[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mogil-bench"
version = "0.1.0"
description = "Safe local benchmark runner and BlindBench artifact exporter"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
dependencies = [
  "harbor==0.18.0",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0",
]

[project.scripts]
mogil-bench = "mogil_bench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mogil_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["docker_smoke: real mandatory Harbor and local Docker integration"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mogil_bench"]
