[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mogil-bench"
version = "0.1.0"
description = "Safe Harbor-based coding evaluation and BlindBench evidence CLI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [{name = "Mogil Ventures"}]
maintainers = [{name = "Noah Mogil"}]
keywords = ["benchmark", "coding-agents", "evaluation", "harbor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "harbor==0.18.0",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
daytona = [
  "daytona==0.196.0",
  "harbor[daytona]==0.18.0",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0",
]

[project.scripts]
mogil-bench = "mogil_bench.cli:app"

[project.urls]
Homepage = "https://github.com/mogilventures/mogil-bench"
Repository = "https://github.com/mogilventures/mogil-bench"
Issues = "https://github.com/mogilventures/mogil-bench/issues"
Changelog = "https://github.com/mogilventures/mogil-bench/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mogil_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "docker_smoke: real mandatory Harbor and local Docker integration",
  "daytona_smoke: manually gated live Harbor and Daytona integration",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mogil_bench"]
